--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, BankMachineActivity!</string>
-    <string name="app_name">BankMachine</string>
+    <string name="hello">Hello World, BankMachineActivity! My App</string>
+    <string name="app_name">BankMachineApp</string>
 
 </resources>
