--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="debitButton">Debit</string>
     <string name="setDatesButton">Set Widthrawl Dates</string>
     <string name="createAccount">Create Account</string>
+    <string name="NamePrompt">Enter Name</string>
+    <string name="AccountPrompt">Enter Account Name</string>
+    <string name="ConfirmButton">Confirm</string>
 
 </resources>
