need to work on debit page and spinner integration

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="NamePrompt">Enter Name</string>
     <string name="AccountPrompt">Enter Account Name</string>
     <string name="ConfirmButton">Confirm</string>
+    <string name="add">Add</string>
+    <string name="subtract">Sub</string>
 
 </resources>
