--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="ConfirmButton">Confirm</string>
     <string name="add">Add</string>
     <string name="subtract">Sub</string>
+    <string name="menuDelete">Delete Accounts</string>
 
 </resources>
