need to refactor database...from there beta should be done

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="menuDelete">Delete Accounts</string>
     <string name="billName">Name of Bill</string>
     <string name="amount">Amount</string>
+    <string name="dateButton">Enter a Date</string>
 
 </resources>
