need to add service. Then need to redo widget

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="amount">Amount</string>
     <string name="dateButton">Enter a Date</string>
     <string name="menuDelete2">Delete Widthdrawals</string>
+    <string name="displayWidthdrawalButton">Display Widthdrawals</string>
 
 </resources>
